--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,70 @@
-/* styles.css */
-body {
-    font-family: Arial, sans-serif;
+body, h1, h2 {
     text-align: center;
-    margin: 0;
+    font-size: 12pt;
+    font-family: "Verdana", "Geneva", sans-serif;
 }
 
-body.index {
-    background-image: url('images/bones_background.jpg');
-    background-size: cover;
-    background-position: center;
+body {
+    margin: 0;
+    padding: 0;
+}
+
+body.index, body.game, body.leaderboard {
+    background: url('images/bones_background.jpg') center/cover;
 }
 
 body.game {
-    background-image: url('images/bones_background.jpg');
-    background-size: cover;
-    background-position: center;
+    background: url('images/home.jpg') center 30%/cover;
 }
 
-body.leaderboard {
-    background-image: url('images/bones_background.jpg');
-    background-size: cover;
-    background-position: center;
+body.register, body.login {
+    background: url('images/dog_flowers.jpg') center 10%/cover;
 }
 
-body.register {
-    background-image: url('images/dog_flowers.jpg');
-    background-size: cover;
-    background-position: center 10%;
-    background-repeat: no-repeat;
+.pet-image, .bowl-image {
+    position: fixed;
+    bottom: 0;
+    max-width: 25%;
 }
 
-body.login {
-    background-image: url('images/dog_flowers.jpg');
-    background-size: cover;
-    background-position: center 10%;
-    background-repeat: no-repeat;
+.pet-image {
+    transform: translateX(800px);
+}
+
+.bowl-image {    
+    max-width: 10%;
+    transform: translateX(1600px);
+}
+
+.button, input[name="logout"]{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+input[name="logout"] {
+    width: 100px;
+    height: 40px;
+}
+
+
+ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+ul li img {
+    vertical-align: middle;
+    width: 25px;
+    margin-bottom: 5px;
 }
 
 .container {
-    background-color: #fff;
+    background: #fff;
     border: 1px solid #ccc;
     padding: 20px;
     margin: 20px auto;
@@ -47,26 +73,19 @@ body.login {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.pet-image {
-    max-width: 100%;
-    border-radius: 10px;
+.stats, table, th, td {
+    font-size: 14px;
 }
 
-.stats {
-    font-size: 18px;
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
 
-form {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 20px 0;
-    max-width: 300px;
+th, td {
+    border: 1px solid black;
+    padding: 8px;
     text-align: center;
-    margin: 0 auto;
-}
-
-h1, h2 {
-    color: #333;
 }
 
 a {
@@ -75,5 +94,91 @@ a {
 }
 
 a:hover {
-    text-decoration: underline;
+    background-color: #FFA;
+}
+
+fieldset {
+    margin: 0 auto;
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+}
+
+legend {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 10px;
+    padding: 0 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    text-align: center;
+}
+
+label {
+    margin-bottom: 8px;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    background-color: #0088cc;
+    color: #fff;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #005580;
+}
+
+p.error {
+    color: red;
+}
+
+.pet-stats-container {
+    display: flex;
+    justify-content: space-around;
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.pet-stat {
+    text-align: center;
+    margin-right: 15px;
+}
+
+.pet-stat p {
+    margin: 0;
+    font-size: 16px;
+}
+
+.speech-bubble {
+    position: fixed;
+}
+
+.speech-bubble img {
+    width: 20%;
+    height: auto;
+    display: block;
+    transform: translateX(450px);
+}
+
+.speech-bubble p {
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    transform: translateX(170px);
+    z-index: 1;
+    color: #000;
+    font-size: 16px;
 }
