--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body, h1, h2 {
     text-align: center;
     font-size: 12pt;
@@ -14,8 +20,10 @@ body.index, body.game, body.leaderboard {
 }
 
 body.game {
-    background: url('images/home.jpg') center 30%/cover;
+    background: url('images/home.jpg') center/cover no-repeat;
+    background-size: 100% 100%;
 }
+
 
 body.register, body.login {
     background: url('images/dog_flowers.jpg') center 10%/cover;
@@ -29,11 +37,12 @@ body.register, body.login {
 
 .pet-image {
     transform: translateX(800px);
+    left: 10%;
 }
 
 .bowl-image {    
     max-width: 10%;
-    transform: translateX(1600px);
+    left: 5%;
 }
 
 .button, input[name="logout"]{
@@ -182,3 +191,5 @@ p.error {
     color: #000;
     font-size: 16px;
 }
+
+
